--- a/index.html
+++ b/index.html
@@ -3,37 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Web Sitesi</title>
+    <title>Wikipedia Benzeri Web Sitesi</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
+            background-color: #f8f9fa;
         }
         header {
-            background-color: #24292e;
-            color: #ffffff;
-            padding: 20px;
-            text-align: center;
+            background-color: #eaecf0;
+            padding: 10px 20px;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        header h1 {
+            margin: 0;
+            font-size: 24px;
         }
         nav {
-            background-color: #333;
-            color: #ffffff;
-            padding: 10px 0;
-            text-align: center;
+            background-color: #f8f9fa;
+            padding: 10px 20px;
+            border-bottom: 1px solid #c8cbcf;
         }
         nav ul {
             list-style-type: none;
             padding: 0;
+            margin: 0;
+            text-align: center;
         }
         nav ul li {
             display: inline;
             margin-right: 20px;
         }
         nav ul li a {
-            color: #ffffff;
             text-decoration: none;
+            color: #0366d6;
+            font-weight: bold;
         }
         nav ul li a:hover {
             text-decoration: underline;
@@ -42,24 +47,28 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 0 20px;
+            background-color: #ffffff;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            margin-top: 30px;
         }
         p {
             line-height: 1.6;
         }
         footer {
-            background-color: #24292e;
-            color: #ffffff;
+            background-color: #eaecf0;
+            color: #586069;
             text-align: center;
             padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            border-top: 1px solid #c8cbcf;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>GitHub Web Sitesi</h1>
+        <h1>Wikipedia Benzeri Web Sitesi</h1>
     </header>
     <nav>
         <ul>
@@ -71,7 +80,7 @@
     <div class="container">
         <section id="anasayfa">
             <h2>Anasayfa</h2>
-            <p>Bu, GitHub üzerindeki web sitenizin anasayfasıdır. Burası web sitenizin ilk ziyaret edilen sayfası olabilir.</p>
+            <p>Bu, Wikipedia benzeri web sitenizin anasayfasıdır. Burası web sitenizin ilk ziyaret edilen sayfası olabilir.</p>
         </section>
         <section id="hakkimda">
             <h2>Hakkımda</h2>
@@ -83,7 +92,7 @@
         </section>
     </div>
     <footer>
-        <p>&copy; 2024 GitHub Web Sitesi - Mehmet Kara</p>
+        <p>&copy; 2024 Wikipedia Benzeri Web Sitesi - Mehmet Kara</p>
     </footer>
 </body>
 </html>
