--- a/index.html
+++ b/index.html
@@ -1,98 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wikipedia Benzeri Web Sitesi</title>
+    <title>Researcher Platform - Bilim Dergisi</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f9fa;
-        }
-        header {
-            background-color: #eaecf0;
-            padding: 10px 20px;
-            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        header h1 {
-            margin: 0;
-            font-size: 24px;
-        }
-        nav {
-            background-color: #f8f9fa;
-            padding: 10px 20px;
-            border-bottom: 1px solid #c8cbcf;
-        }
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-            text-align: center;
-        }
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-        nav ul li a {
-            text-decoration: none;
-            color: #0366d6;
-            font-weight: bold;
-        }
-        nav ul li a:hover {
-            text-decoration: underline;
+            background-color: #f2f2f2;
         }
         .container {
             max-width: 800px;
-            margin: 20px auto;
-            padding: 0 20px;
-            background-color: #ffffff;
-            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        h2 {
-            margin-top: 30px;
+        h1 {
+            text-align: center;
+            color: #333;
         }
         p {
+            color: #666;
             line-height: 1.6;
         }
-        footer {
-            background-color: #eaecf0;
-            color: #586069;
-            text-align: center;
-            padding: 10px;
-            border-top: 1px solid #c8cbcf;
-            margin-top: 20px;
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Wikipedia Benzeri Web Sitesi</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#anasayfa">Anasayfa</a></li>
-            <li><a href="#hakkimda">Hakkımda</a></li>
-            <li><a href="#iletisim">İletişim</a></li>
-        </ul>
-    </nav>
     <div class="container">
-        <section id="anasayfa">
-            <h2>Anasayfa</h2>
-            <p>Bu, Wikipedia benzeri web sitenizin anasayfasıdır. Burası web sitenizin ilk ziyaret edilen sayfası olabilir.</p>
-        </section>
-        <section id="hakkimda">
-            <h2>Hakkımda</h2>
-            <p>Bu bölümde kendinizle ilgili bilgileri paylaşabilirsiniz.</p>
-        </section>
-        <section id="iletisim">
-            <h2>İletişim</h2>
-            <p>Bu bölümde ziyaretçilerinizin sizinle iletişime geçebileceği bilgileri sağlayabilirsiniz.</p>
-        </section>
+        <h1>Researcher Platform</h1>
+        <p>Bilim dergimizde yayınlanan makale PDF'lerine erişmek için aşağıdaki butona tıklayabilirsiniz.</p>
+        <a href="link/to/your/pdfs" class="button">Makaleleri İndir</a>
     </div>
-    <footer>
-        <p>&copy; 2024 Wikipedia Benzeri Web Sitesi - Mehmet Kara</p>
-    </footer>
 </body>
 </html>
